feat: hg var rows

--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -8799,6 +8799,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Построение вариационного ряда выборки\n",
+    "Для каждого $q\\in\\{5, 10, 100, 1000, 10^5\\}$ построим вариационный ряд выборки:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HG_VAR_ROWS = {}\n",
+    "for q in samples_hg:\n",
+    "    HG_VAR_ROWS[q] = np.ndarray(shape=samples_hg[q].shape, dtype=np.int)\n",
+    "    for i, sample in enumerate(samples_hg[q]):\n",
+    "        HG_VAR_ROWS[q][i] = np.sort(sample)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Выведем получившиеся упорядоченные выборки для `q = 5` и `q = 10`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====== q = 5 ======:\n",
+      "#1: [5 8 8 8 9]\n",
+      "#2: [ 6  7  8 10 13]\n",
+      "#3: [ 8  9  9 11 11]\n",
+      "#4: [5 5 6 7 8]\n",
+      "#5: [5 7 7 8 8]\n",
+      "====== q = 10 ======:\n",
+      "#1: [ 5  6  8  8  9  9  9  9 10 13]\n",
+      "#2: [ 4  5  7  7  7  8  9  9 10 11]\n",
+      "#3: [6 6 6 6 6 7 7 8 9 9]\n",
+      "#4: [5 7 7 7 7 7 7 8 8 8]\n",
+      "#5: [ 6  7  7  8  8  9  9  9  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for q in (5, 10):\n",
+    "    print(f'====== q = {q} ======:')\n",
+    "    for i, s in enumerate(HG_VAR_ROWS[q]):\n",
+    "        print(f'#{i+1}: {s}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Нормальное распределение"
    ]
   },
